// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelComponent should match previous snapshot 1`] = `
<styled.label
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  htmlFor=""
  letterSpacing={0.32}
  lineHeight="1.125em"
>
  Test label
</styled.label>
`;

exports[`LabelComponent should match previous snapshot with custom typography 1`] = `
<styled.label
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  htmlFor=""
  letterSpacing={0.32}
  lineHeight="1.125em"
  typography="doublepica"
>
  Test label
</styled.label>
`;
